# mujoco-study

./: MUJOCO_LOG.TXT  README.md  body.urdf.xacro  pyproject.toml  rosbot_xl_macro.urdf.xacro  run_simulation.py  squares_png_test.py  wheel.urdf.xacro
blender/: my_mj_terrain.blend
mujoco_study/: chair_test.xml  denso_test.xml  denso_vs050.xml  sandbox.xml  spot_test.xml  terrain_test.xml
mujoco_study/assets/cadeira/: Cube.stl  Cube_002.stl
mujoco_study/assets/chair/: Cube_003.stl
mujoco_study/assets/denso/: J3.mtl  J4.mtl  J4.stl  J5.stl  J6.mtl  J6.stl  base_link.mtl
mujoco_study/assets/denso/J1/: J1.xml
mujoco_study/assets/denso/J2/: J2.xml
mujoco_study/assets/denso/J3/: J3.xml
mujoco_study/assets/denso/J4/: J4.xml
mujoco_study/assets/denso/J5/: J5.xml  material.mtl
mujoco_study/assets/denso/J6/: J6.xml  material.mtl
mujoco_study/assets/denso/base_link/: base_link.xml
mujoco_study/assets/meshes/denso/: J2.stl  J5.mtl  base_link.stl
mujoco_study/assets/rosbot/: antenna.mtl  antenna_connector.mtl  body.mtl  camera_mount_bot.mtl  camera_mount_mid.mtl  camera_mount_top.mtl  mecanum_a.mtl  mecanum_b.mtl  wheel_a.mtl  wheel_b.mtl
mujoco_study/models/: cadeira.xml  chair.xml  denso.xml  denso_vs050.xml  my_mj_terrain.xml  spot.xml  spot_arm.xml
urdf/: J3.stl  denso.gazebo  denso.ros2control.xacro  denso.xacro  materials.xacro  mjmodel.xml
