[project]
name = "mujoco-study"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel-Salvador",email = "daniovictor@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "mujoco (>=3.3.0,<4.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "tyro (>=0.9.18,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
denso = "python -m run_simulation --model-path ./mujoco_study/denso_vs050.xml"
viewer = "python -m mujoco.viewer"
terrain = "python ./run_simulation.py --model-path ./mujoco_study/terrain_test.xml"